<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/cost_of_service_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service"
            app:srcCompat="@drawable/ic_baseline_store" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@id/cost_of_service_icon"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/service_question_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/service_question"
            app:layout_constraintStart_toStartOf="@id/cost_of_service_icon"
            app:layout_constraintTop_toTopOf="@id/service_question"
            app:srcCompat="@drawable/ic_baseline_room_service" />

        <TextView
            android:id="@+id/service_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toStartOf="@id/cost_of_service"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/option_twenty_percent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/service_question"
            app:layout_constraintTop_toBottomOf="@id/service_question">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_amazing" />

            <RadioButton
                android:id="@+id/option_eighteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_good" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_ok" />
        </RadioGroup>

        <ImageView
            android:id="@+id/round_up_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/round_up_switch"
            app:layout_constraintStart_toStartOf="@id/cost_of_service_icon"
            app:layout_constraintTop_toTopOf="@id/round_up_switch"
            app:srcCompat="@drawable/ic_round_up" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:text="@string/round_up_the_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/cost_of_service"
            app:layout_constraintTop_toBottomOf="@id/tip_options" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_calculate"
            app:layout_constraintEnd_toEndOf="@id/round_up_switch"
            app:layout_constraintStart_toStartOf="@id/round_up_switch"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tip_result"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/button_calculate"
            app:layout_constraintTop_toBottomOf="@id/button_calculate"
            tools:text="@string/tip_amount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/final_sum"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/button_calculate"
            app:layout_constraintTop_toBottomOf="@id/tip_result"
            tools:text="@string/final_sum" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

